[package]
name = "chippy8"
version = "0.1.0"
authors = ["Brendan Long <bccbrendan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to download SDL:
# sudo apt install libsdl2-dev



[dependencies]
sdl2 = "0.32"
rand = "0.7.3"
